Adds StandardFs classes.
Adds the StandardFs class as well as two implementations of it, one for
FATX and the other for Xbox ISO files.

--- a/xbFsLib/xbFsLib.csproj
+++ b/xbFsLib/xbFsLib.csproj
@@ -47,6 +47,9 @@
     <Compile Include="FATX\Partition.cs" />
     <Compile Include="FATX\USBStream.cs" />
     <Compile Include="FATX\Utilities.cs" />
+    <Compile Include="StandardFs\Implementations\FATXStandard.cs" />
+    <Compile Include="StandardFs\Implementations\XISOStandard.cs" />
+    <Compile Include="StandardFs\StandardFs.cs" />
     <Compile Include="IO\CoreIO.cs" />
     <Compile Include="IO\ChainedStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
